# eigen-initializer_list

./: CMakeLists.txt  README.md
src/: Array_initializer_list.h  Matrix_initializer_list.h  eigen_initializer_list_demo.cpp
